Use ProjectSystemSyncManager for sync to avoid using reflection, also add support for IntelliJ with Java 17 runtime